# SocioReasoner

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: start_rlvr_socioseg_pipeline.py  start_rlvr_socioseg_pipeline_infer.py
examples/infer/: infer.sh  rlvr_megatron.yaml
examples/train/: rlvr_megatron.yaml  train.sh
roll/configs/: base_config.py  data_args.py  worker_config.py
roll/datasets/: collator.py  dataset.py
roll/distributed/scheduler/: generate_scheduler.py  log_monitor.py  protocol.py
roll/distributed/strategy/: factory.py  megatron_strategy.py  seg_strategy.py  sglang_strategy.py  vllm_strategy.py
roll/models/: model_providers.py
roll/pipeline/: base_worker.py  multi_utils.py
roll/pipeline/rlvr/: rlvr_config.py  rlvr_math_vlm_pipeline.py  rlvr_pipeline.py  rlvr_socioseg_vlm_pipeline.py  rlvr_socioseg_vlm_pipeline_infer.py  seg_worker.py  test.py
roll/pipeline/rlvr/rewards/: code_sandbox_reward_worker.py  crossthinkqa_rule_reward_worker.py  general_val_rule_reward_worker.py  ifeval_rule_reward_worker.py  llm_judge_reward_worker.py  math_rule_reward_worker.py  socioseg_rule_reward_worker.py
roll/utils/: functionals.py  ray_utils.py
roll/utils/metrics/: metrics_manager.py
