[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socioreasoner"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["segmentation", "rl", "map"]
license = {file = "LICENSE"}
authors = [
  { name = "Wang Yu", email = "wangfaye@whu.edu.cn" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: Centos"
]

[tool.setuptools]
packages = ["roll"]

[tool.black]
line-length = 119
target-version = ['py310']

[tool.ruff]
ignore = ["E501", "E741", "W605"]
select = ["E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["roll"]
